--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,6 @@ indent_style = space
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
