--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A Heroes of Might and Magic engine written in TypeScript.",
   "version": "0.0.0",
   "devDependencies": {
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
+  },
+  "scripts": {
+    "lint": "tslint -p ."
   }
 }
