--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "tslint": "^5.11.0",
+    "tslint-no-circular-imports": "^0.6.1",
     "typescript": "^3.0.3"
   },
   "scripts": {
