--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "tslint": "^5.11.0",
     "tslint-no-circular-imports": "^0.6.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.3"
   },
   "scripts": {
