--- a/packages/homm1-react/package.json
+++ b/packages/homm1-react/package.json
@@ -6,11 +6,20 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
-    "typescript": "^3.0.3"
+    "@types/webpack": "^4.4.12",
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.0.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   }
 }
