--- a/packages/homm1-react/package.json
+++ b/packages/homm1-react/package.json
@@ -2,15 +2,24 @@
   "name": "heroes-homm1-react",
   "version": "0.0.0",
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@storybook/addon-actions": "^4.0.0-alpha.23",
+    "@storybook/addon-knobs": "^4.0.0-alpha.23",
+    "@storybook/react": "^4.0.0-alpha.23",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-knobs": "^3.4.1",
+    "@types/storybook__react": "^3.0.9",
     "@types/webpack": "^4.4.12",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.2",
     "html-webpack-plugin": "^3.2.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
@@ -20,6 +29,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "storybook": "start-storybook -c storybook -s ."
   }
 }
