implement hero skills in hero window

--- a/packages/homm1-react/package.json
+++ b/packages/homm1-react/package.json
@@ -5,7 +5,8 @@
     "antd": "^3.9.3",
     "moment": "^2.22.2",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-intl": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -15,13 +16,16 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-intl": "^2.3.11",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-knobs": "^3.4.1",
     "@types/storybook__react": "^3.0.9",
     "@types/webpack": "^4.4.12",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
     "webpack": "^4.20.2",
