--- a/packages/homm1-react/package.json
+++ b/packages/homm1-react/package.json
@@ -6,7 +6,9 @@
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-intl": "^2.7.0"
+    "react-intl": "^2.7.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -17,6 +19,8 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.11",
+    "@types/react-redux": "^6.0.9",
+    "@types/redux": "^3.6.0",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-knobs": "^3.4.1",
     "@types/storybook__react": "^3.0.9",
@@ -25,6 +29,7 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "redux-devtools-extension": "^2.13.5",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
