--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "A Heroes of Might and Magic engine written in TypeScript.",
   "version": "0.0.0",
   "devDependencies": {
+    "@types/jest": "^23.3.2",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.3",
     "tslint": "^5.11.0",
     "tslint-no-circular-imports": "^0.6.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.3"
   },
   "scripts": {
-    "lint": "tslint -p ."
+    "lint": "tslint -p .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   }
 }
