fix heroes-homm1 package name

--- a/packages/homm1/package.json
+++ b/packages/homm1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroes-homm1-react",
+  "name": "heroes-homm1",
   "version": "0.0.0",
   "devDependencies": {
     "typescript": "^3.1.1"
