--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "heroes-engine",
   "description": "A Heroes of Might and Magic engine written in TypeScript.",
   "version": "0.0.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "jest": "^23.6.0",
