--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -1,12 +1,13 @@
 {
   "name": "heroes-homm1-state",
   "version": "0.0.0",
+  "dependencies": {
+    "heroes-homm1": "0.0.0",
+    "redux": "^4.0.0"
+  },
   "devDependencies": {
     "@types/redux": "^3.6.0",
     "typescript": "^3.1.1"
-  },
-  "dependencies": {
-    "redux": "^4.0.0"
   },
   "scripts": {
     "build": "tsc"
