--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
-    "@storybook/addon-actions": "^4.0.0-alpha.23",
-    "@storybook/addon-knobs": "^4.0.0-alpha.23",
-    "@storybook/react": "^4.0.0-alpha.23",
+    "@storybook/addon-actions": "^4.0.0",
+    "@storybook/addon-knobs": "^4.0.0",
+    "@storybook/react": "^4.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
