--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -32,7 +32,9 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
     "redux-devtools-extension": "^2.13.5",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
