--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -31,6 +31,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "redux-devtools-extension": "^2.13.5",
