--- a/packages/heroes-core/package.json
+++ b/packages/heroes-core/package.json
@@ -2,9 +2,11 @@
   "name": "heroes-core",
   "version": "0.0.0",
   "devDependencies": {
+    "rimraf": "^2.6.2",
     "typescript": "^3.0.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rimraf dist"
   }
 }
