--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "redux-devtools-extension": "^2.13.5",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
@@ -46,6 +47,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
+    "clean": "rimraf dist",
     "storybook": "start-storybook -c storybook -p 9001 -s ."
   }
 }
