--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -8,9 +8,11 @@
   },
   "devDependencies": {
     "@types/redux": "^3.6.0",
+    "rimraf": "^2.6.2",
     "typescript": "^3.1.1"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rimraf dist"
   }
 }
