--- a/packages/heroes-homm1/package.json
+++ b/packages/heroes-homm1/package.json
@@ -5,9 +5,11 @@
     "heroes-core": "0.0.0"
   },
   "devDependencies": {
+    "rimraf": "^2.6.2",
     "typescript": "^3.1.1"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rimraf dist"
   }
 }
