--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -37,6 +37,7 @@
     "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
+    "storybook-readme": "^4.0.2",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
