--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "@types/jest": "^23.3.2",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.3",
-    "tslint": "^5.11.0",
     "tslint-immutable": "^5.1.2",
     "tslint-no-circular-imports": "^0.6.1",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.0.3"
   },
   "scripts": {
     "build": "yarn workspaces run build",
     "clean": "yarn workspaces run clean",
-    "lint": "tslint -p .",
+    "lint": "yarn workspaces run lint",
     "test": "jest",
     "test:watch": "jest --watch"
   }
