--- a/packages/heroes-core/package.json
+++ b/packages/heroes-core/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "devDependencies": {
     "rimraf": "^2.6.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "tslint -p ."
   }
 }
