--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -32,6 +32,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
@@ -40,6 +42,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "tslint -p ."
   }
 }
