--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -34,10 +34,13 @@
     "storybook-readme": "^4.0.2",
     "style-loader": "^0.23.0",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.3",
     "webpack": "^4.20.2"
   },
   "scripts": {
+    "lint": "tslint -p .",
     "storybook": "start-storybook -c storybook -p 9001 -s ."
   }
 }
