--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "@types/redux": "^3.6.0",
     "rimraf": "^2.6.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "tslint -p ."
   }
 }
