--- a/packages/heroes-homm1/package.json
+++ b/packages/heroes-homm1/package.json
@@ -6,10 +6,12 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "tslint -p ."
   }
 }
