--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -30,6 +30,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-intl": "^2.7.0",
+    "react-measure": "^2.2.4",
     "sass-loader": "^7.1.0",
     "storybook-readme": "^4.0.2",
     "style-loader": "^0.23.0",
