--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -36,6 +36,13 @@
     "sass-loader": "^7.1.0",
     "storybook-readme": "^4.0.2",
     "style-loader": "^0.23.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-rational-order": "^0.0.4",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
+    "stylelint-order": "^2.1.0",
+    "stylelint-scss": "^3.5.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
@@ -43,7 +50,9 @@
     "webpack": "^4.20.2"
   },
   "scripts": {
-    "lint": "tslint -p .",
+    "lint": "yarn lint:code && yarn lint:styles",
+    "lint:code": "tslint -p .",
+    "lint:styles": "stylelint 'src/**/*.scss'",
     "storybook": "start-storybook -c storybook -p 9001 -s ."
   }
 }
