--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -14,6 +14,7 @@
     "@storybook/addon-actions": "^4.0.0",
     "@storybook/addon-knobs": "^4.0.0",
     "@storybook/react": "^4.0.0",
+    "@types/classnames": "^2.2.7",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.11",
@@ -26,6 +27,7 @@
     "antd": "^3.9.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.2",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "node-sass": "^4.10.0",
