--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -15,12 +15,18 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.0.0",
+    "@storybook/addon-knobs": "^4.0.0",
+    "@storybook/react": "^4.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.11",
     "@types/react-redux": "^6.0.9",
     "@types/redux": "^3.6.0",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-knobs": "^3.4.1",
+    "@types/storybook__react": "^3.0.9",
     "@types/webpack": "^4.4.12",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
@@ -43,6 +49,7 @@
     "build": "webpack",
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
-    "lint": "tslint -p ."
+    "lint": "tslint -p .",
+    "storybook": "start-storybook -c storybook -p 9002 -s ."
   }
 }
