--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "yarn workspaces run build",
     "clean": "yarn workspaces run clean",
     "lint": "yarn workspaces run lint",
+    "pretest": "tsc -p tsconfig.test.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
