--- a/packages/heroes-core/package.json
+++ b/packages/heroes-core/package.json
@@ -2,13 +2,20 @@
   "name": "heroes-core",
   "version": "0.0.0",
   "devDependencies": {
+    "@types/jest": "^23.3.2",
+    "jest": "^23.6.0",
     "rimraf": "^2.6.2",
+    "ts-jest": "^23.10.3",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "lint": "tslint -p ."
+    "lint": "tslint -p .",
+    "pretest": "tsc -p tsconfig.test.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   }
 }
