--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -7,14 +7,21 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.2",
     "@types/redux": "^3.6.0",
+    "jest": "^23.6.0",
     "rimraf": "^2.6.2",
+    "ts-jest": "^23.10.3",
     "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   },
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "lint": "tslint -p ."
+    "lint": "tslint -p .",
+    "pretest": "tsc -p tsconfig.test.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   }
 }
