--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -18,7 +18,10 @@
     "@storybook/addon-actions": "^4.0.0",
     "@storybook/addon-knobs": "^4.0.0",
     "@storybook/react": "^4.0.0",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.2",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.11",
@@ -30,13 +33,17 @@
     "@types/webpack": "^4.4.12",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "ts-jest": "^23.10.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
@@ -50,6 +57,9 @@
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
     "lint": "tslint -p .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "storybook": "start-storybook -c storybook -p 9002 -s ."
   }
 }
