add removing coverage folder to clean scripts

--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
-    "clean": "rimraf dist",
+    "clean": "rimraf coverage dist",
     "lint": "tslint -p .",
     "test": "jest",
     "test:watch": "jest --watch",
