--- a/packages/heroes-core/package.json
+++ b/packages/heroes-core/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist",
+    "clean": "rimraf coverage dist",
     "lint": "tslint -p .",
     "pretest": "tsc -p tsconfig.test.json",
     "test": "jest",
