--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist",
+    "clean": "rimraf coverage dist",
     "lint": "tslint -p .",
     "pretest": "tsc -p tsconfig.test.json",
     "test": "jest",
