--- a/packages/heroes-homm1-react/tsconfig.json
+++ b/packages/heroes-homm1-react/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "lib": [
       "es6",
-      "dom"
+      "dom",
+      "es2017.string"
     ],
     "jsx": "react"
   }
