--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.5.2",
     "react-intl": "^2.7.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.0"
   },
   "devDependencies": {
@@ -26,11 +27,13 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.11",
     "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.2",
     "@types/redux": "^3.6.0",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-knobs": "^3.4.1",
     "@types/storybook__react": "^3.0.9",
     "@types/webpack": "^4.4.12",
+    "@types/webpack-dev-server": "^3.1.5",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
     "enzyme": "^3.9.0",
