--- a/packages/heroes-homm1/package.json
+++ b/packages/heroes-homm1/package.json
@@ -10,6 +10,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
+    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.4.5"
   },
   "scripts": {
