--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "jest": "^24.8.0",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "tslint-immutable": "^6.0.0",
-    "tslint-no-circular-imports": "^0.7.0",
     "tslint-microsoft-contrib": "^6.2.0",
+    "tslint-no-circular-imports": "^0.7.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.5"
   },
