--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@storybook/addon-actions": "^5.1.8",
+    "@storybook/addon-knobs": "^5.1.8",
+    "@storybook/react": "^5.1.8",
     "@types/jest": "^24.0.15",
+    "@types/redux": "^3.6.0",
+    "@types/storybook__addon-actions": "^3.4.3",
+    "@types/storybook__addon-knobs": "^5.0.1",
+    "@types/storybook__react": "^4.0.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
+    "redux": "^4.0.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
     "tslint-immutable": "^6.0.0",
     "tslint-microsoft-contrib": "^6.2.0",
