--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -12,13 +12,9 @@
     "react-dom": "^16.5.2",
     "react-intl": "^2.9.0",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.8",
-    "@storybook/addon-knobs": "^5.1.8",
-    "@storybook/react": "^5.1.8",
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
@@ -27,7 +23,6 @@
     "@types/react-intl": "^2.3.18",
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
-    "@types/redux": "^3.6.0",
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-knobs": "^5.0.1",
     "@types/storybook__react": "^4.0.2",
@@ -35,15 +30,12 @@
     "@types/webpack-dev-server": "^3.1.6",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "redux-devtools-extension": "^2.13.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "ts-node": "^8.3.0",
     "typescript": "^3.4.5",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
