--- a/packages/heroes-homm1-state/package.json
+++ b/packages/heroes-homm1-state/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "heroes-core": "0.0.0",
-    "heroes-homm1": "0.0.0",
-    "redux": "^4.0.0"
+    "heroes-homm1": "0.0.0"
   },
   "devDependencies": {
-    "@types/redux": "^3.6.0",
     "typescript": "^3.4.5"
   },
   "scripts": {
