--- a/package.json
+++ b/package.json
@@ -6,21 +6,34 @@
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {
+    "antd": "^3.19.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-intl": "^2.9.0",
+    "redux": "^4.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-knobs": "^5.1.8",
     "@storybook/react": "^5.1.8",
+    "@types/enzyme": "^3.10.0",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.20",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-intl": "^2.3.18",
     "@types/redux": "^3.6.0",
+    "@types/storybook-readme": "^5.0.3",
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-knobs": "^5.0.1",
     "@types/storybook__react": "^4.0.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
-    "redux": "^4.0.0",
     "rimraf": "^2.6.2",
+    "storybook-readme": "^5.0.3",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
