--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -2,40 +2,21 @@
   "name": "heroes-homm1-react",
   "version": "0.0.0",
   "peerDependencies": {
-    "antd": "^3.9.3",
     "heroes-core": "0.0.0",
-    "heroes-homm1": "0.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-intl": "^2.7.0"
+    "heroes-homm1": "0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
     "@types/classnames": "^2.2.8",
-    "@types/enzyme": "^3.9.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/react": "^16.8.20",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-intl": "^2.3.18",
     "@types/react-measure": "^2.0.5",
-    "@types/storybook-readme": "^5.0.3",
-    "@types/storybook__addon-actions": "^3.4.3",
-    "@types/storybook__addon-knobs": "^5.0.1",
-    "@types/storybook__react": "^4.0.2",
     "@types/webpack": "^4.4.32",
-    "antd": "^3.19.4",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "node-sass": "^4.12.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-intl": "^2.9.0",
     "react-measure": "^2.3.0",
     "sass-loader": "^7.1.0",
-    "storybook-readme": "^5.0.3",
     "style-loader": "^0.23.0",
     "stylelint": "^10.1.0",
     "stylelint-config-rational-order": "^0.1.2",
