--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   ],
   "dependencies": {
     "antd": "^3.19.4",
+    "classnames": "^2.2.6",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-intl": "^2.9.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.0"
   },
   "devDependencies": {
@@ -18,22 +21,35 @@
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-knobs": "^5.1.8",
     "@storybook/react": "^5.1.8",
+    "@types/classnames": "^2.2.8",
     "@types/enzyme": "^3.10.0",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-intl": "^2.3.18",
+    "@types/react-router-dom": "^4.3.4",
     "@types/redux": "^3.6.0",
     "@types/storybook-readme": "^5.0.3",
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-knobs": "^5.0.1",
     "@types/storybook__react": "^4.0.2",
+    "@types/webpack": "^4.4.32",
+    "@types/webpack-dev-server": "^3.1.6",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "storybook-readme": "^5.0.3",
+    "style-loader": "^0.23.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
@@ -41,7 +57,10 @@
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   },
   "scripts": {
     "build": "yarn workspaces run build",
