--- a/packages/heroes-homm1-react-app/package.json
+++ b/packages/heroes-homm1-react-app/package.json
@@ -6,28 +6,12 @@
     "heroes-homm1": "0.0.0",
     "heroes-homm1-react": "0.0.0",
     "heroes-homm1-state": "0.0.0",
-    "moment": "^2.22.2",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1"
+    "react-redux": "^7.1.0"
   },
   "devDependencies": {
-    "@types/html-webpack-plugin": "^3.2.0",
     "@types/react-redux": "^7.1.0",
-    "@types/react-router-dom": "^4.3.4",
-    "@types/webpack": "^4.4.32",
-    "@types/webpack-dev-server": "^3.1.6",
-    "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.12.0",
     "redux-devtools-extension": "^2.13.5",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "typescript": "^3.4.5",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1"
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "build": "webpack",
