--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -6,18 +6,8 @@
     "heroes-homm1": "0.0.0"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.8",
     "@types/react-measure": "^2.0.5",
-    "@types/webpack": "^4.4.32",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6",
-    "classnames": "^2.2.6",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "node-sass": "^4.12.0",
     "react-measure": "^2.3.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
     "stylelint": "^10.1.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^3.3.0",
@@ -25,8 +15,7 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
     "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.8.0",
-    "typescript": "^3.4.5",
-    "webpack": "^4.34.0"
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "clean": "rimraf coverage",
