--- a/packages/heroes-core/package.json
+++ b/packages/heroes-core/package.json
@@ -1,9 +1,7 @@
 {
   "name": "heroes-core",
   "version": "0.0.0",
-  "devDependencies": {
-    "typescript": "^3.4.5"
-  },
+  "devDependencies": {},
   "scripts": {
     "build": "tsc",
     "clean": "rimraf coverage dist",
