--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -14,8 +14,7 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.8.0",
-    "typescript": "^3.4.5"
+    "stylelint-scss": "^3.8.0"
   },
   "scripts": {
     "clean": "rimraf coverage",
