--- a/packages/heroes-homm1/package.json
+++ b/packages/heroes-homm1/package.json
@@ -4,9 +4,7 @@
   "dependencies": {
     "heroes-core": "0.0.0"
   },
-  "devDependencies": {
-    "typescript": "^3.4.5"
-  },
+  "devDependencies": {},
   "scripts": {
     "build": "tsc",
     "clean": "rimraf coverage dist",
