--- a/package.json
+++ b/package.json
@@ -50,6 +50,13 @@
     "sass-loader": "^7.1.0",
     "storybook-readme": "^5.0.3",
     "style-loader": "^0.23.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
+    "stylelint-order": "^3.0.0",
+    "stylelint-scss": "^3.8.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
