--- a/packages/heroes-homm1-react/package.json
+++ b/packages/heroes-homm1-react/package.json
@@ -7,14 +7,7 @@
   },
   "devDependencies": {
     "@types/react-measure": "^2.0.5",
-    "react-measure": "^2.3.0",
-    "stylelint": "^10.1.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
-    "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.8.0"
+    "react-measure": "^2.3.0"
   },
   "scripts": {
     "clean": "rimraf coverage",
