--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.6.3",
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-knobs": "^5.1.8",
     "@storybook/react": "^5.1.8",
@@ -29,7 +29,7 @@
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-intl": "^2.3.18",
-    "@types/react-router-dom": "^4.3.4",
+    "@types/react-router-dom": "^5.1.0",
     "@types/storybook-readme": "^5.0.3",
     "@types/webpack": "^4.4.32",
     "@types/webpack-dev-server": "^3.1.6",
@@ -42,7 +42,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "storybook-readme": "^5.0.3",
     "style-loader": "^1.0.0",
