--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.9",
     "jest": "^24.8.0",
+    "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
@@ -72,8 +73,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
+      "pre-commit": "lint-staged",
       "pre-push": "yarn test"
     }
+  },
+  "lint-staged": {
+    "*.(ts|tsx)": "tslint",
+    "*.scss": "stylelint"
   }
 }
