--- a/packages/heroes-homm1-react/.stylelintrc.json
+++ b/packages/heroes-homm1-react/.stylelintrc.json
@@ -1,23 +1,3 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-rational-order",
-    "stylelint-config-recommended-scss"
-  ],
-  "plugins": [
-    "stylelint-scss",
-    "stylelint-order",
-    "stylelint-declaration-block-no-ignored-properties"
-  ],
-  "rules": {
-    "selector-pseudo-class-no-unknown": [
-      true,
-      {
-        "ignorePseudoClasses": [
-          "global",
-          "local"
-        ]
-      }
-    ]
-  }
+  "extends": "../../.stylelintrc.json"
 }
