setup Git hooks (closes #87)

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.9",
     "jest": "^24.8.0",
+    "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
@@ -68,5 +70,15 @@
     "lint": "yarn workspaces run lint",
     "test": "yarn workspaces run test",
     "test:coverage": "yarn workspaces run test:coverage"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn lint && yarn test"
+    }
+  },
+  "lint-staged": {
+    "*.(ts|tsx)": "tslint",
+    "*.scss": "stylelint"
   }
 }
